--- a/index.html
+++ b/index.html
@@ -4,66 +4,52 @@
   <meta charset="UTF-8">
   <title>Countdown</title>
   <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: transparent; /* 👈 fondo transparente */
-      font-family: Arial, sans-serif;
-      color: #fff;
-      margin: 0;
-    }
+.count-down {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #1a1a1a;
+  color: white;
+}
 
-    .countdown {
-      display: flex;
-      gap: 20px;
-      text-align: center;
-    }
+.timer {
+  display: flex;
+  gap: 40px;
+  margin: 1em 0;
+  font-family: "TikTok Sans Display";
+}
 
-    .time-box {
-      background: #222;
-      padding: 20px;
-      border-radius: 12px;
-      min-width: 80px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-    }
+.timer-box {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 205px;
+  height: 184px;
+  background-color: rgba(255, 255, 255, 0.4);
+  padding: 30px 0;
+  border-radius: 40px;
+  font-size: 130px;
+  line-height: 123px;
+}
 
-    .time-box span {
-      display: block;
-    }
+button {
+  margin: 0.5em;
+}
 
-    .number {
-      font-size: 2.5rem;
-      font-weight: bold;
-      color: #00ff88;
-    }
-
-    .label {
-      font-size: 0.9rem;
-      opacity: 0.8;
-    }
-  </style>
 </head>
 <body>
-  <div class="countdown" id="countdown">
-    <div class="time-box">
-      <span class="number" id="days">0</span>
-      <span class="label">Días</span>
+    <div class="count-down">
+      <h1>Countdown Timer</h1>
+      <div class="timer">
+        <div class="timer-box days">00</div>
+        <div class="timer-box hours">00</div>
+        <div class="timer-box minutes">00</div>
+        <div class="timer-box seconds">00</div>
+      </div>
     </div>
-    <div class="time-box">
-      <span class="number" id="hours">0</span>
-      <span class="label">Horas</span>
-    </div>
-    <div class="time-box">
-      <span class="number" id="minutes">0</span>
-      <span class="label">Min</span>
-    </div>
-    <div class="time-box">
-      <span class="number" id="seconds">0</span>
-      <span class="label">Seg</span>
-    </div>
-  </div>
 
   <script>
     // 📅 Ajusta la fecha de tu evento aquí:
