--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,6 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
   <style>
+    @font-face {
+      font-family: "TikTok Sans Display";
+      src: url("./fonts/TikTok-Sans-Display-Bold.otf") format("opentype");
+      font-weight: normal;
+      font-style: normal;
+    }
+
     .count-down {
       display: flex;
       flex-direction: column;
