--- a/index.html
+++ b/index.html
@@ -4,62 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="./src/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
-  <style>
-    @font-face {
-      font-family: "TikTok Sans Display";
-      src: url("./fonts/TikTok-Sans-Display-Bold.otf") format("opentype");
-      font-weight: normal;
-      font-style: normal;
-    }
 
-    .count-down {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-color: #1a1a1a;
-      color: white;
-    }
 
-    .timer {
-      display: flex;
-      gap: 40px;
-      margin: 1em 0;
-      font-family: "TikTok Sans Display";
-    }
-
-    .timer-box {
-      box-sizing: border-box;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 205px;
-      height: 184px;
-      background-color: rgba(255, 255, 255, 0.4);
-      padding: 30px 0;
-      border-radius: 40px;
-      font-size: 130px;
-      line-height: 123px;
-    }
-
-    button {
-      margin: 0.5em;
-    }
-  </style>
 </head>
 
 <body>
   <div class="count-down">
     <h1>Countdown Timer</h1>
     <div class="timer">
-      <div class="timer-box days">00</div>
-      <div class="timer-box hours">00</div>
-      <div class="timer-box minutes">00</div>
-      <div class="timer-box seconds">00</div>
+      <div class="timer-box days">27</div>
+      <div class="timer-box hours">12</div>
+      <div class="timer-box minutes">44</div>
+      <div class="timer-box seconds">09</div>
     </div>
   </div>
   <script type="module" src="/src/main.js"></script>
