--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="timer-box seconds">09</div>
     </div>
   </div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
