--- a/index.html
+++ b/index.html
@@ -12,13 +12,24 @@
 </head>
 
 <body>
-  <div class="count-down">
-    <h1>Countdown Timer</h1>
+ <div class="count-down">
     <div class="timer">
-      <div class="timer-box days">27</div>
-      <div class="timer-box hours">12</div>
-      <div class="timer-box minutes">44</div>
-      <div class="timer-box seconds">09</div>
+      <div class="timer-container">
+        <div class="timer-box days">27</div>
+        <div class="time-text">DAYS</div>
+      </div>
+      <div class="timer-container">
+        <div class="timer-box hours">12</div>
+        <div class="time-text">HOURS</div>
+      </div>
+      <div class="timer-container">
+        <div class="timer-box minutes">44</div>
+        <div class="time-text">MINUTES</div>
+      </div>
+      <div class="timer-container">
+        <div class="timer-box seconds">09</div>
+        <div class="time-text">SECONDS</div>
+      </div>
     </div>
   </div>
   <script type="module" src="./js/main.js"></script>
